2009-04-19  Stefan Kost  <ensonic@users.sf.net>

	* Matilde/Tracker/Tracker.cpp:
	  Emulate V1 API.

2009-04-18  Krzysztof Foltman  <kfoltman@users.sf.net>

	* Matilde/Tracker/SurfsDSPLib/SRF_Resampler.cpp:
	* Matilde/Tracker/Tracker.cpp:
	  Unbreak and re-enable Matilde's spline interpolation mode by
	  replacing a floating point hack with plain multiplication.

2009-04-17  Stefan Kost  <ensonic@users.sf.net>

	* Matilde/Tracker/Makefile.am:
	  Build api version 1 and 2 (its still the same, need to make the changes).

	* Matilde/Tracker/SurfsDSPLib/Makefile.am:
	  Add -DBUZZ for more resampler variants.

	* Matilde/Tracker/Track.cpp:
	* Matilde/Tracker/Tracker.cpp:
	  Set interpolation mode to linear by default until spline is fixed.
	
	* common/MachineInterface.h:
	  Comments.

2009-04-05  Stefan Kost  <ensonic@users.sf.net>

	* Ensonic/CallbackTester/Makefile.am:
	* Matilde/Tracker/Makefile.am:
	  Link against dsplib. Fixes #2724592

2009-04-05  Stefan Kost  <ensonic@users.sf.net>

	* Matilde/Tracker/Envelope.h:
	* Matilde/Tracker/SurfsDSPLib/SRF_Amp.cpp:
	* Matilde/Tracker/SurfsDSPLib/SRF_Resampler.cpp:
	  Fix compiler warnings here too.

2009-04-05  Krzysztof Foltman  <kfoltman@users.sf.net>

	* FSM/PanzerDelay/Delay.cpp:
	* FSM/WahMan/WahMan.cpp:
	  Clean up, fix a potentially huge bug in PanzerDelay.

2009-04-05  Krzysztof Foltman  <kfoltman@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Vegetable.cpp:
	* FSM/Kick/Kick.cpp:
	  Clean up a bit.

2009-04-05  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Add --enable-debug which is a kind of "developer-mode". Among other things
	  it turns compile warnings into errors.

	* FSM/ArpMan/ArpMan.cpp:
	* FSM/Chorus/Chorus.cpp:
	* FSM/Chorus2/Chorus2.cpp:
	* FSM/Infector/Filters.cpp:
	* FSM/dspchips/DSPChips.h:
	* common/dsplib/dsplib.cpp:
	  Fix a first batch of warnings.

2009-03-13  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Kick/Kick.cpp:
	* FSM/PanzerDelay/Delay.cpp: