@@ -2,7 +2,7 @@
 
 plugin_LTLIBRARIES = libFSM_PanzerDelay.la
 
-libFSM_PanzerDelay_la_SOURCES = Delay.cpp
+libFSM_PanzerDelay_la_SOURCES = PanzerDelay.cpp
 libFSM_PanzerDelay_la_CXXFLAGS = $(BM_CXXFLAGS)
 libFSM_PanzerDelay_la_LDFLAGS = $(BM_LIBS)
 libFSM_PanzerDelay_la_LIBADD = $(top_builddir)/common/mdk/libmdk.la
